--- a/trunk/ssf/main/build.xml
+++ b/trunk/ssf/main/build.xml
@@ -71,42 +71,28 @@
 	<target name="jar" depends="compile,ss-hib-gen">
 		<jar
 			basedir="${classes.dir}"
-			excludes="**/*.hbm.xml"
 			jarfile="${jar.file}"
 		>
 			<manifest>
 				<attribute name="Class-Path" value="${classpath.manifest.ss} ${classpath.manifest.3rd}" />
 			</manifest>
 		</jar>
-		<!--<copy file="${jar.file}" todir="${project.dir}/ear/modules" />-->
-		<!--<jar
-			basedir="${classes.dir}"
-			excludes="**/ejb/*EJB.class,**/ejb/*Pool.class,**/ejb/*Util.class"
-			includes="**/ejb/*.class,**/model/*.class"
-			jarfile="main-common.jar"
-		>
-			<fileset dir="${classes.dir}">
-				<include name="**/ejb/*HomeUtil.class" />
-			</fileset>
-		</jar>-->
 	</target>
 
 	<target name="jar-skip-hibernate" depends="compile">
 		<jar
 			basedir="${classes.dir}"
-			excludes="**/*.hbm.xml"
 			jarfile="${jar.file}"
 		>
 			<manifest>
 				<attribute name="Class-Path" value="${classpath.manifest.ss} ${classpath.manifest.3rd}" />
 			</manifest>
 		</jar>
-		<!--<copy file="${jar.file}" todir="${project.dir}/ear/modules" />-->
 	</target>
 
 	<target name="java2html" depends="init">
 		<java
-			classname="com.liferay.util.Java2Html"
+			classname="com.sitescape.util.Java2Html"
 			classpathref="project.classpath"
 			fork="true">
 				<arg value="${java2html.bat}" />
@@ -137,425 +123,15 @@
 	</target>
 
 	<target name="deploy" depends="jar">
-		<antcall target="deploy-ejb-jar">
+		<antcall target="deploy-jar">
 			<param name="deploy-support.jar.file" value="${jar.file}" />
 		</antcall>
 	</target>
 
 	<target name="deploy-skip-hibernate" depends="jar-skip-hibernate">
-		<antcall target="deploy-ejb-jar">
+		<antcall target="deploy-jar">
 			<param name="deploy-support.jar.file" value="${jar.file}" />
 		</antcall>
-	</target>
-
-	<target name="build-db" depends="init">
-		<java
-			classname="com.liferay.portal.tools.DBBuilder"
-			classpathref="project.classpath"
-			fork="true"
-			maxmemory="256m"
-			newenvironment="true"
-		/>
-	</target>
-
-	<target name="build-earxml" depends="init">
-		<java
-			classname="com.liferay.portal.tools.EARXMLBuilder"
-			classpathref="project.classpath"
-			fork="true"
-			newenvironment="true"
-		/>
-	</target>
-
-	<target name="build-ejb" depends="init">
-		<java
-			classname="com.liferay.portal.tools.EJBBuilder"
-			classpathref="project.classpath"
-			fork="true"
-			maxmemory="256m"
-			newenvironment="true"
-		>
-			<jvmarg value="-Dorg.apache.commons.logging.Log=org.apache.commons.logging.impl.SimpleLog" />
-			<arg value="ejb.xml" />
-			<arg value="classes/META-INF/portal-hbm.xml" />
-			<arg value="classes/META-INF/portal-spring-enterprise.xml" />
-			<arg value="classes/META-INF/portal-spring-professional.xml" />
-			<arg value="com.liferay.portal.util.SpringUtil" />
-		</java>
-		<delete file="EJBBuilder.temp" />
-		<antcall target="build-ejbxml" />
-	</target>
-
-	<target name="build-ejbs">
-		<move file="ejb.xml" tofile="ejb.xml.temp" failonerror="false" />
-
-		<copy file="src/com/liferay/portal/ejb.xml" tofile="ejb.xml" overwrite="true" />
-		<antcall target="build-ejb" />
-
-		<copy file="src/com/liferay/portlet/addressbook/ejb.xml" tofile="ejb.xml" overwrite="true" />
-		<antcall target="build-ejb" />
-
-		<copy file="src/com/liferay/portlet/admin/ejb.xml" tofile="ejb.xml" overwrite="true" />
-		<antcall target="build-ejb" />
-
-<!--		<copy file="src/com/liferay/portlet/biblejournal/ejb.xml" tofile="ejb.xml" overwrite="true" />
-		<antcall target="build-ejb" />
--->
-		<copy file="src/com/liferay/portlet/blogs/ejb.xml" tofile="ejb.xml" overwrite="true" />
-		<antcall target="build-ejb" />
-
-		<copy file="src/com/liferay/portlet/bookmarks/ejb.xml" tofile="ejb.xml" overwrite="true" />
-		<antcall target="build-ejb" />
-
-		<copy file="src/com/liferay/portlet/calendar/ejb.xml" tofile="ejb.xml" overwrite="true" />
-		<antcall target="build-ejb" />
-
-		<copy file="src/com/liferay/portlet/documentlibrary/ejb.xml" tofile="ejb.xml" overwrite="true" />
-		<antcall target="build-ejb" />
-
-		<copy file="src/com/liferay/portlet/imagegallery/ejb.xml" tofile="ejb.xml" overwrite="true" />
-		<antcall target="build-ejb" />
-
-		<copy file="src/com/liferay/portlet/journal/ejb.xml" tofile="ejb.xml" overwrite="true" />
-		<antcall target="build-ejb" />
-
-		<copy file="src/com/liferay/portlet/mail/ejb.xml" tofile="ejb.xml" overwrite="true" />
-		<antcall target="build-ejb" />
-
-		<copy file="src/com/liferay/portlet/messageboards/ejb.xml" tofile="ejb.xml" overwrite="true" />
-		<antcall target="build-ejb" />
-
-		<copy file="src/com/liferay/portlet/network/ejb.xml" tofile="ejb.xml" overwrite="true" />
-		<antcall target="build-ejb" />
-
-		<copy file="src/com/liferay/portlet/polls/ejb.xml" tofile="ejb.xml" overwrite="true" />
-		<antcall target="build-ejb" />
-
-<!--		<copy file="src/com/liferay/portlet/project/ejb.xml" tofile="ejb.xml" overwrite="true" />
-		<antcall target="build-ejb" />
--->
-<!--		<copy file="src/com/liferay/portlet/shopping/ejb.xml" tofile="ejb.xml" overwrite="true" />
-		<antcall target="build-ejb" />
--->
-		<copy file="src/com/liferay/portlet/wiki/ejb.xml" tofile="ejb.xml" overwrite="true" />
-		<antcall target="build-ejb" />
-
-		<move file="ejb.xml.temp" tofile="ejb.xml" overwrite="true" failonerror="false" />
-	</target>
-
-	<target name="build-ejbxml" depends="init">
-		<java
-			classname="com.liferay.portal.tools.EJBXMLBuilder"
-			classpathref="project.classpath"
-			fork="true"
-			newenvironment="true"
-		>
-			<arg value="ssf-main.jar" />
-		</java>
-	</target>
-
-	<target name="build-lang" depends="build-lang-liferay,build-lang-sitescape"/>
-	
-	<target name="build-lang-liferay" depends="init">
-		<antcall target="build-lang-liferay-native2ascii-all" />
-		<java
-			classname="com.liferay.portal.tools.LangBuilder"
-			classpathref="project.classpath"
-			fork="true"
-			newenvironment="true"
-		>
-			<jvmarg value="-Dfile.encoding=UTF8" />
-			<arg value="Language" />
-		</java>
-		<antcall target="build-lang-liferay-native2ascii-all" />
-	</target>
-
-	<target name="build-lang-sitescape" depends="init">
-		<antcall target="build-lang-sitescape-native2ascii-all" />
-		<java
-			classname="com.liferay.portal.tools.LangBuilder"
-			classpathref="project.classpath"
-			fork="true"
-			newenvironment="true"
-		>
-			<jvmarg value="-Dfile.encoding=UTF8" />
-			<arg value="SLanguage" />
-		</java>
-		<antcall target="build-lang-sitescape-native2ascii-all" />
-	</target>
-
-	<target name="build-lang-liferay-native2ascii">
-		<delete file="classes/content/Language_${lang.code}.properties" failonerror="false" />
-		<exec dir="classes/content" executable="cmd.exe">
-			<arg line="/c ${env.JAVA_HOME}/bin/native2ascii -encoding UTF8 Language_${lang.code}.properties.native Language_${lang.code}.properties" />
-		</exec>
-	</target>
-
-	<target name="build-lang-sitescape-native2ascii">
-		<delete file="classes/content/SLanguage_${lang.code}.properties" failonerror="false" />
-		<exec dir="classes/content" executable="cmd.exe">
-			<arg line="/c ${env.JAVA_HOME}/bin/native2ascii -encoding UTF8 SLanguage_${lang.code}.properties.native SLanguage_${lang.code}.properties" />
-		</exec>
-	</target>
-
-	<target name="build-lang-liferay-native2ascii-all">
-		<antcall target="build-lang-liferay-native2ascii">
-			<param name="lang.code" value="zh_CN" />
-		</antcall>
-
-		<antcall target="build-lang-liferay-native2ascii">
-			<param name="lang.code" value="zh_TW" />
-		</antcall>
-
-		<antcall target="build-lang-liferay-native2ascii">
-			<param name="lang.code" value="nl" />
-		</antcall>
-
-		<antcall target="build-lang-liferay-native2ascii">
-			<param name="lang.code" value="fr" />
-		</antcall>
-
-		<antcall target="build-lang-liferay-native2ascii">
-			<param name="lang.code" value="de" />
-		</antcall>
-
-		<antcall target="build-lang-liferay-native2ascii">
-			<param name="lang.code" value="el" />
-		</antcall>
-
-		<antcall target="build-lang-liferay-native2ascii">
-			<param name="lang.code" value="it" />
-		</antcall>
-
-		<antcall target="build-lang-liferay-native2ascii">
-			<param name="lang.code" value="ja" />
-		</antcall>
-
-		<antcall target="build-lang-liferay-native2ascii">
-			<param name="lang.code" value="ko" />
-		</antcall>
-
-		<antcall target="build-lang-liferay-native2ascii">
-			<param name="lang.code" value="pt" />
-		</antcall>
-
-		<antcall target="build-lang-liferay-native2ascii">
-			<param name="lang.code" value="es" />
-		</antcall>
-
-		<antcall target="build-lang-liferay-native2ascii">
-			<param name="lang.code" value="tr" />
-		</antcall>
-
-		<antcall target="build-lang-liferay-native2ascii">
-			<param name="lang.code" value="vi" />
-		</antcall>
-	</target>
-
-	<target name="build-lang-sitescape-native2ascii-all">
-		<antcall target="build-lang-sitescape-native2ascii">
-			<param name="lang.code" value="zh_CN" />
-		</antcall>
-
-		<antcall target="build-lang-sitescape-native2ascii">
-			<param name="lang.code" value="zh_TW" />
-		</antcall>
-
-		<antcall target="build-lang-sitescape-native2ascii">
-			<param name="lang.code" value="nl" />
-		</antcall>
-
-		<antcall target="build-lang-sitescape-native2ascii">
-			<param name="lang.code" value="fr" />
-		</antcall>
-
-		<antcall target="build-lang-sitescape-native2ascii">
-			<param name="lang.code" value="de" />
-		</antcall>
-
-		<antcall target="build-lang-sitescape-native2ascii">
-			<param name="lang.code" value="el" />
-		</antcall>
-
-		<antcall target="build-lang-sitescape-native2ascii">
-			<param name="lang.code" value="it" />
-		</antcall>
-
-		<antcall target="build-lang-sitescape-native2ascii">
-			<param name="lang.code" value="ja" />
-		</antcall>
-
-		<antcall target="build-lang-sitescape-native2ascii">
-			<param name="lang.code" value="ko" />
-		</antcall>
-
-		<antcall target="build-lang-sitescape-native2ascii">
-			<param name="lang.code" value="pt" />
-		</antcall>
-
-		<antcall target="build-lang-sitescape-native2ascii">
-			<param name="lang.code" value="es" />
-		</antcall>
-
-		<antcall target="build-lang-sitescape-native2ascii">
-			<param name="lang.code" value="tr" />
-		</antcall>
-
-		<antcall target="build-lang-sitescape-native2ascii">
-			<param name="lang.code" value="vi" />
-		</antcall>
-	</target>
-
-	<target name="build-newscategories" depends="init" if="release.info">
-		<java
-			classname="com.liferay.portlet.news.tools.NewsCategoriesBuilder"
-			classpathref="project.classpath"
-			fork="true"
-			newenvironment="true"
-		>
-			<jvmarg value="-Dorg.apache.commons.logging.Log=org.apache.commons.logging.impl.SimpleLog" />
-		</java>
-	</target>
-
-	<target name="build-releaseinfo" depends="init" if="release.info">
-		<java
-			classname="com.liferay.portal.tools.ReleaseInfoBuilder"
-			classpathref="project.classpath"
-			fork="true"
-			newenvironment="true"
-		/>
-	</target>
-<!--
-	<target name="build-reverendfun" depends="init" if="release.info">
-		<java
-			classname="com.liferay.portlet.reverendfun.tools.ReverendFunBuilder"
-			classpathref="project.classpath"
-			fork="true"
-			newenvironment="true"
-		>
-			<jvmarg value="-Dorg.apache.commons.logging.Log=org.apache.commons.logging.impl.SimpleLog" />
-		</java>
-	</target>
--->
-	<target name="build-skin" depends="init">
-		<ant dir="../web" target="build-skin" />
-	</target>
-
-	<target name="build-website" depends="init">
-		<ant dir="../web" target="build-website" />
-	</target>
-
-	<target name="build-webxml" depends="init">
-		<ant dir="../web" target="build-webxml" />
-	</target>
-
-	<target name="build-wsdd" depends="compile">
-		<java
-			classname="com.liferay.portal.tools.WSDDBuilder"
-			classpathref="project.classpath"
-			fork="true"
-			maxmemory="256m"
-			newenvironment="true"
-		>
-			<jvmarg value="-Dorg.apache.commons.logging.Log=org.apache.commons.logging.impl.SimpleLog" />
-			<arg value="ejb.xml" />
-			<arg value="../web/docroot/WEB-INF/server-config.wsdd" />
-		</java>
-		<antcall target="build-webxml" />
-	</target>
-
-	<target name="build-wsdds">
-		<move file="ejb.xml" tofile="ejb.xml.temp" failonerror="false" />
-
-		<copy file="src/com/liferay/portal/ejb.xml" tofile="ejb.xml" overwrite="true" />
-		<antcall target="build-wsdd" />
-
-		<copy file="src/com/liferay/portlet/addressbook/ejb.xml" tofile="ejb.xml" overwrite="true" />
-		<antcall target="build-wsdd" />
-
-		<copy file="src/com/liferay/portlet/admin/ejb.xml" tofile="ejb.xml" overwrite="true" />
-		<antcall target="build-wsdd" />
-
-<!--		<copy file="src/com/liferay/portlet/biblejournal/ejb.xml" tofile="ejb.xml" overwrite="true" />
-		<antcall target="build-wsdd" />
--->
-		<copy file="src/com/liferay/portlet/blogs/ejb.xml" tofile="ejb.xml" overwrite="true" />
-		<antcall target="build-wsdd" />
-
-		<copy file="src/com/liferay/portlet/bookmarks/ejb.xml" tofile="ejb.xml" overwrite="true" />
-		<antcall target="build-wsdd" />
-
-		<copy file="src/com/liferay/portlet/calendar/ejb.xml" tofile="ejb.xml" overwrite="true" />
-		<antcall target="build-wsdd" />
-
-		<copy file="src/com/liferay/portlet/documentlibrary/ejb.xml" tofile="ejb.xml" overwrite="true" />
-		<antcall target="build-wsdd" />
-
-		<copy file="src/com/liferay/portlet/imagegallery/ejb.xml" tofile="ejb.xml" overwrite="true" />
-		<antcall target="build-wsdd" />
-
-		<copy file="src/com/liferay/portlet/journal/ejb.xml" tofile="ejb.xml" overwrite="true" />
-		<antcall target="build-wsdd" />
-
-		<copy file="src/com/liferay/portlet/mail/ejb.xml" tofile="ejb.xml" overwrite="true" />
-		<antcall target="build-wsdd" />
-
-		<copy file="src/com/liferay/portlet/messageboards/ejb.xml" tofile="ejb.xml" overwrite="true" />
-		<antcall target="build-wsdd" />
-
-		<copy file="src/com/liferay/portlet/network/ejb.xml" tofile="ejb.xml" overwrite="true" />
-		<antcall target="build-wsdd" />
-
-		<copy file="src/com/liferay/portlet/polls/ejb.xml" tofile="ejb.xml" overwrite="true" />
-		<antcall target="build-wsdd" />
-
-<!--		<copy file="src/com/liferay/portlet/project/ejb.xml" tofile="ejb.xml" overwrite="true" />
-		<antcall target="build-wsdd" />
--->
-<!--		<copy file="src/com/liferay/portlet/shopping/ejb.xml" tofile="ejb.xml" overwrite="true" />
-		<antcall target="build-wsdd" />
--->
-		<copy file="src/com/liferay/portlet/wiki/ejb.xml" tofile="ejb.xml" overwrite="true" />
-		<antcall target="build-wsdd" />
-
-		<move file="ejb.xml.temp" tofile="ejb.xml" overwrite="true" failonerror="false" />
-	</target>
-
-	<target name="format-source" depends="init">
-		<java
-			classname="com.liferay.portal.tools.SourceFormatter"
-			classpathref="project.classpath"
-			fork="true"
-			newenvironment="true"
-		/>
-		<delete file="EJBBuilder.temp" />
-		<antcall target="build-releaseinfo" />
-	</target>
-
-	<target name="load-db" depends="init">
-		<delete file="test.properties" failonerror="false" />
-		<delete file="test.script" failonerror="false" />
-		<java
-			classname="com.liferay.portal.tools.DBLoader"
-			classpathref="project.classpath"
-			fork="true"
-			newenvironment="true"
-		>
-			<jvmarg value="-Xmx128m" />
-		</java>
-		<move file="test.properties" todir="../sql" />
-		<move file="test.script" todir="../sql" />
-	</target>
-
-	<target name="tcpmon" depends="init">
-		<java
-			classname="org.apache.axis.utils.tcpmon"
-			classpathref="project.classpath"
-			newenvironment="true"
-			fork="true"
-		>
-			<jvmarg value="-Xmx128m" />
-		</java>
 	</target>
 
 	<target name="ss-hib-clean" depends="init" description="Delete Hibernate mapping files">
