--- a/trunk/ssf/taglib/build.xml
+++ b/trunk/ssf/taglib/build.xml
@@ -22,8 +22,8 @@
 			</classpath>
 		</taskdef>
 		<propertycopy name="app.server.dir" from="app.server.${app.server.type}.dir" />
-		<propertycopy name="app.server.deploy.dir" from="app.server.${app.server.type}.deploy.dir" />
 		<propertycopy name="app.server.lib.dir" from="app.server.${app.server.type}.lib.dir" />
+		<propertycopy name="app.server.deploy.dir" from="app.server.${app.server.type}.deploy.dir" />
 	</target>
 
 	<target name="clean" depends="init">
@@ -59,7 +59,7 @@
 
 	<target name="java2html" depends="init">
 		<java
-			classname="com.liferay.util.Java2Html"
+			classname="com.sitescape.util.Java2Html"
 			classpathref="project.classpath"
 			fork="true">
 				<arg value="${java2html.bat}" />
@@ -89,10 +89,6 @@
 		/>
 	</target>
 
-	<!--<target name="deploy-local" depends="jar">
-		<copy file="${jar.file}" todir="${project.dir}/web/docroot/WEB-INF/lib" />
-	</target>-->
-
 	<target name="deploy" depends="jar">
 		<if>
 			<or>
@@ -100,7 +96,7 @@
 				<equals arg1="${app.server.type}" arg2="tomcat" />
 			</or>
 			<then>
-				<copy file="${jar.file}" todir="${app.server.deploy.dir}/WEB-INF/lib" />
+				<copy file="${jar.file}" todir="${app.server.deploy.dir}/ssf/WEB-INF/lib" />
 			</then>
 			<else>
 				<if>
