--- a/ssf/release.properties
+++ b/ssf/release.properties
@@ -9,13 +9,7 @@
 ## Version
 ##
 
-lp.version=0.1.0
-
-##
-## CVS Tag
-##
-
-lp.cvs.tag=RELEASE_3_2_0
+ssf.version=0.1.0
 
 ##
 ## Release info
@@ -27,9 +21,7 @@ lp.cvs.tag=RELEASE_3_2_0
 ## Directories
 ##
 
-lp.eclipse.dir=C:/SourceForge/liferay/eclipse_workspace
-#lp.ext.dir=C:/SourceForge/liferay/ext
-lp.source.dir=C:/ss/v8/ssf
+ssf.source.dir=C:/ss/v8/ssf
 
 ##
 ## Indexserver Version
