--- a/ssf/web/build.xml
+++ b/ssf/web/build.xml
@@ -20,8 +20,8 @@
 			</classpath>
 		</taskdef>
 		<propertycopy name="app.server.dir" from="app.server.${app.server.type}.dir" />
-		<propertycopy name="app.server.deploy.dir" from="app.server.${app.server.type}.deploy.dir" />
 		<propertycopy name="app.server.lib.dir" from="app.server.${app.server.type}.lib.dir" />
+		<propertycopy name="app.server.deploy.dir" from="app.server.${app.server.type}.deploy.dir" />
 	</target>
 
 	<target name="clean" depends="init">
@@ -48,77 +48,8 @@
 				<equals arg1="${app.server.type}" arg2="tomcat" />
 			</or>
 			<then>
-				<copy todir="${app.server.deploy.dir}">
-					<fileset dir="${web.dir}" excludes="WEB-INF/web.xml" />
-				</copy>
-			</then>
-			<else>
-				<if>
-					<or>
-						<equals arg1="${app.server.type}" arg2="jboss-jetty" />
-						<equals arg1="${app.server.type}" arg2="jboss-tomcat" />
-						<equals arg1="${app.server.type}" arg2="jonas-jetty" />
-						<equals arg1="${app.server.type}" arg2="jonas-tomcat" />
-						<equals arg1="${app.server.type}" arg2="rexip" />
-						<equals arg1="${app.server.type}" arg2="weblogic" />
-					</or>
-					<then>
-						<property name="war.deploy.file" value="ssf-web-complete.war" />
-						<echo message="${war.deploy.file}" />
-					</then>
-					<elseif>
-						<or>
-							<equals arg1="${app.server.type}" arg2="oc4j" />
-							<equals arg1="${app.server.type}" arg2="orion" />
-						</or>
-						<then>
-							<property name="war.deploy.file" value="ssf-web-complete" />
-						</then>
-					</elseif>
-				</if>
-
-				<copy todir="${app.server.deploy.dir}/ext.ear/${war.deploy.file}">
-					<fileset dir="${web.dir}" excludes="WEB-INF/web.xml" />
-				</copy>
-
-				<mkdir dir="${app.server.deploy.dir}/ext.ear/${war.deploy.file}/META-INF" />
-
-				<manifest file="${app.server.deploy.dir}/ext.ear/${war.deploy.file}/META-INF/MANIFEST.MF">
-					<attribute name="Class-Path" value="ssf-main.jar ${classpath.manifest}" />
-				</manifest>
-
-				<if>
-					<equals arg1="${app.server.type}" arg2="jonas-jetty" />
-					<then>
-						<copy file="${app.server.deploy.dir}/ext.ear/${war.deploy.file}/WEB-INF/web-jetty.xml.JOnAS_Jetty" tofile="${app.server.deploy.dir}/ext.ear/${war.deploy.file}/WEB-INF/web-jetty.xml" overwrite="yes" />
-					</then>
-				</if>
-
-				<if>
-					<or>
-						<equals arg1="${app.server.type}" arg2="jonas-jetty" />
-						<equals arg1="${app.server.type}" arg2="jonas-tomcat" />
-					</or>
-					<then>
-						<replace file="${app.server.deploy.dir}/ext.ear/${war.deploy.file}/WEB-INF/web.xml">
-							<replacetoken><![CDATA[<ejb-link>com_liferay_]]></replacetoken>
-							<replacevalue><![CDATA[<ejb-link>ssf-main.jar#com_liferay_]]></replacevalue>
-						</replace>
-					</then>
-				</if>
-			</else>
-		</if>
-	</target>
-
-	<target name="deploy-html" depends="init">
-		<if>
-			<or>
-				<equals arg1="${app.server.type}" arg2="jetty" />
-				<equals arg1="${app.server.type}" arg2="tomcat" />
-			</or>
-			<then>
-				<copy todir="${app.server.deploy.dir}/html">
-					<fileset dir="${web.dir}/html" />
+				<copy todir="${app.server.deploy.dir}/ssf">
+					<fileset dir="${web.dir}" />
 				</copy>
 			</then>
 			<else>
@@ -152,37 +83,5 @@
 			</else>
 		</if>
 	</target>
-
-	<target name="build-skin" depends="init">
-		<java
-			classname="com.liferay.portal.tools.SkinBuilder"
-			classpathref="project.classpath"
-			fork="true"
-			newenvironment="true"
-		>
-			<jvmarg value="-Djava.awt.headless=true" />
-			<jvmarg value="-Dskin.builder.overwrite=true" />
-		</java>
-	</target>
-
-	<target name="build-website" depends="init">
-		<java
-			classname="com.liferay.portal.tools.WebSiteBuilder"
-			classpathref="project.classpath"
-			fork="true"
-			newenvironment="true"
-		>
-			<arg line="${asp.portal-ext.properties} ${asp.orion.config}" />
-		</java>
-		<antcall target="build-webxml" />
-	</target>
-
-	<target name="build-webxml" depends="init">
-		<java
-			classname="com.liferay.portal.tools.WebXMLBuilder"
-			classpathref="project.classpath"
-			fork="true"
-			newenvironment="true"
-		/>
-	</target>
+	
 </project>
