--- a/trunk/ssf/web/docroot/WEB-INF/classes/content/employees.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/content/employees.properties
@@ -1,6 +1,8 @@
 ##
 ## Resource bundle file for ss_employees portlet
 ##
+## Note: Do not add any other messages here.
+##
 
 javax.portlet.title=SiteScape Employees
 javax.portlet.short-title=SSEmployees
