--- a/trunk/ssf/web/docroot/WEB-INF/classes/content/workspacetree.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/content/workspacetree.properties
@@ -1,6 +1,8 @@
 ##
 ## Resource bundle file for ss_workspacetree portlet
 ##
+## Note: Do not add any other messages here.
+##
 
 javax.portlet.title=SiteScape Workspace Tree
 javax.portlet.short-title=SSWorkspaceTree
