--- a/ssf/web/docroot/WEB-INF/classes/content/widgettest.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/widgettest.properties
@@ -1,6 +1,8 @@
 ##
 ## Resource bundle file for ss_widgettest portlet
 ##
+## Note: Do not add any other messages here.
+##
 
 javax.portlet.title=SiteScape Widget Test
 javax.portlet.short-title=SSWidgetTest
