--- a/trunk/ssf/web/docroot/WEB-INF/web.xml
+++ b/trunk/ssf/web/docroot/WEB-INF/web.xml
@@ -55,14 +55,29 @@
 	</listener>
 
 	<servlet>
-		<servlet-name>ViewRendererServlet</servlet-name>
+		<servlet-name>viewRendererServlet</servlet-name>
 		<servlet-class>org.springframework.web.portlet.ViewRendererServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
+	
+	<servlet>
+		<servlet-name>web</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>namespace</param-name>
+			<param-value>context/web-servlet</param-value>
+		</init-param>
+		<load-on-startup>2</load-on-startup>
+	</servlet>
 
 	<servlet-mapping>
-		<servlet-name>ViewRendererServlet</servlet-name>
+		<servlet-name>viewRendererServlet</servlet-name>
 		<url-pattern>/WEB-INF/servlet/view</url-pattern>
+	</servlet-mapping>
+
+	<servlet-mapping>
+		<servlet-name>web</servlet-name>
+		<url-pattern>/web/*</url-pattern>		
 	</servlet-mapping>
 
     <taglib>
