--- a/ssf/web/docroot/WEB-INF/web.xml
+++ b/ssf/web/docroot/WEB-INF/web.xml
@@ -125,4 +125,9 @@
         <taglib-location>/WEB-INF/tags/ssf.tld</taglib-location>
     </taglib>
 
+    <taglib>
+        <taglib-uri>http://www.sitescape.com/tags-portletadapter</taglib-uri>
+        <taglib-location>/WEB-INF/tags/ssf-portletadapter.tld</taglib-location>
+    </taglib>
+
 </web-app>
