--- a/ssf/app.server.properties
+++ b/ssf/app.server.properties
@@ -29,11 +29,11 @@ app.server.tomcat.dir=C:/liferay-portal-pro-3.5.0-tomcat
 app.server.tomcat.server.dir=${app.server.tomcat.dir}
 app.server.tomcat.deploy.dir=${app.server.tomcat.dir}/webapps
 app.server.tomcat.lib.dir=${app.server.tomcat.dir}/common/lib/ext
-app.server.tomcat.ssf.dir=${app.server.tomcat.dir}/webapps/ssf
+app.server.tomcat.ssf.dir=${app.server.tomcat.deploy.dir}/ssf
 
 app.server.jboss-tomcat.dir=C:/liferay-portal-ent-3.6.1-jboss-tomcat
 app.server.jboss-tomcat.server.dir=${app.server.jboss-tomcat.dir}/server/default
 app.server.jboss-tomcat.deploy.dir=${app.server.jboss-tomcat.server.dir}/deploy
-app.server.jboss-tomcat.lib.dir=${app.server.jboss-tomcat.server.dir}/lib/ext
-#app.server.jboss-tomcat.ssf.dir=${app.server.tomcat.dir}/webapps/ssf
+app.server.jboss-tomcat.lib.dir=${app.server.jboss-tomcat.deploy.dir}/ext.ear/lib
+app.server.jboss-tomcat.ssf.dir=${app.server.jboss-tomcat.deploy.dir}/1ssf.war
 
