Add method for generating valid URLs for portletadapter without using HttpServletRequest. Used by background jobs.

--- a/ssf/web/docroot/WEB-INF/classes/config/ssf.properties
+++ b/ssf/web/docroot/WEB-INF/classes/config/ssf.properties
@@ -5,3 +5,19 @@
 # If true, print some debug information to console regarding session
 # and user authentication information obtained from request object. 
 debug.web.request.env.print=false
+
+##
+## The following set of information is used to generate URLs from the tiers 
+## that do not have access to appropriate web-tier datastructures such as
+## HttpServletRequest or PortletRequest.
+##
+
+# Web context root (optional) - If unspecified, defaults to /ssf
+ssf.ctx=/ssf
+# The name of the host (required)
+ssf.host=localhost
+# The port number on the host (optional) - If unspecified, defaults to 80
+ssf.port=8080
+# The SSL port number on the host (optional) - If unspecified, defaults to 443
+ssf.secure.port=8443
+
